Fixed suggest-topics margin on mobile

--- a/assets/stylesheets/customization.scss
+++ b/assets/stylesheets/customization.scss
@@ -136,7 +136,7 @@ body {
   }
 
   #suggested-topics {
-    margin-top: 44px;
+    padding-top: 44px;
   }
 
   .user-main .staff-counters {
